2016-02-09 Yann LEYDIER <yann@leydier.info>
	* GraphicalLine (ExtractFeatures): Bugfix.
	* View (AlignAll): Added.
	* GUI (align_selection): Now can align whole views.

2016-02-08 Yann LEYDIER <yann@leydier.info>
	* GUI (change_font): Now changes the whole application's font.
	* GUI (load_project): Bugfix.

2016-02-07 Yann LEYDIER <yann@leydier.info>
	* CharacterDialog (update_buttons): Now detects if the distance matrix is
			obsolete.
	* CharacterDialog (update_distmat): Added.
	* Document (cstr, readTextWElements, readTextCElements): Not using
			TEISelection anymore.
	* GUI (load_project): Not using TEISelection anymore.
	* View Impl (readLinkElements): Is now able to either report inconsistencies 
			or correct them.
	* Document (getCleanView, TidyUp, WarningReport): Added.
	* GUI (load_project): Now ask the user if she wants to correct
			inconsistencies or abort.
	* EntityManager, EntityDialog: Removed.
	* ExceptionTEISelection, TEIImporter, TEISelectionNode: Removed.
	* TEIDisplay: Added.
	* GUI (show_tei): Added.

2016-02-04 Yann LEYDIER <yann@leydier.info>
	* CharacterDialog (compute_distmat, compute_gm, compute_gsc): Now skip
			unaligned characters.

2016-02-03 Yann LEYDIER <yann@leydier.info>
	* View (GetLeftCorrection, GetRightCorrection): Are now const.
	* View (IsAligned): Added.

2016-02-02 Yann LEYDIER <yann@leydier.info>
	* GUI (tree_selection_changed): Now displays lines, words and characters at
			page and view levels.
	* GUI (load_project): Fixed a crash when the project folder is not a valid
			Oriflamms project.
	* GUI (load_project, stats), EntityDialog (dialogAddFile): 
			Fixed path encoding on Windows.
	* GUI (load_project): Now selects automatically the right folder if it was
			selected in stead of entered.

2016-02-01 Yann LEYDIER <yann@leydier.info>
	* View (ComputeFrontier): Now returns a straight line if no path is found.
	* GraphicalLine (ExtractFeatures): Bugfix.